1999-07-16  Tim Jenness  <timj@jach.hawaii.edu>

	* surflib/surflib_remove_dc_from_exp.f
	(SURFLIB_REMOVE_DC_FROM_EXP):  Check that the DCVALUE is good
	before subtracting it.

	* surflib/surflib_remove_dc_via_sect.f
	(SURFLIB_REMOVE_DC_VIA_SECT): Remove debug print statements.
	(SURFLIB_REMOVE_DC_VIA_SECT): Check that the DCVALUE is good
	before subtracting it.

1999-07-15  Tim Jenness  <timj@jach.hawaii.edu>

	* src/surf_rebin.f (SURF_REBIN): Improve the sky
	model input code to make it more flexible.

	* src/surf_grid_calcsky.f (SURF_GRID_CALCSKY): Improve the sky
	model input code to make it more flexible.

	* surflib/surflib_rem_grid.f (SURFLIB_REM_GRID): Check for bad
	values in the index array

	* surflib/surflib_fill_grid.f (SURFLIB_FILL_GRID): Check for bad
	values in the index array

	* surflib/surflib_histogram_grid.f (SURFLIB_HISTOGRAM_GRID): Check 
	for bad values in the index array.

1999-07-14  Tim Jenness  <timj@jach.hawaii.edu>

	* surflib/surflib_remove_ip.f (SURFLIB_REMOVE_IP): Protect
	division by zero on variance calculation. Correct part of the
	calculation.

1999-07-14  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* src/surf_add_dbm.f (SURF_ADD_DBM): Support 3 beams

	* surflib/surflib_calc_chopped_image.f (SURFLIB_CALC_CHOPPED_IMAGE): 
	convert from surflib_calc_dual_beam so that it handles 3 beams.

1999-07-14  Tim Jenness  <timj@jach.hawaii.edu>

	Release SURF V1.4-2 to community (not Starlink)
	
1999-07-14  Tim Jenness  <timj@jach.hawaii.edu>

	* src/surf_rebin.f (SURF_REBIN):  Pass LAT_OBS into
	SCULIB_CALC_APPARENT. 

	* src/surf_read_rebin_ndf.f (SURF_READ_REBIN_NDF): Pass LAT_OBS
	into SCULIB_CALC_APPARENT. 

	* src/surf_scuover.f: Pass LAT_OBS into SCULIB_CALC_APPARENT.

	* src/surf_request_output_coords.f (SURF_REQUEST_OUTPUT_COORDS):
	Pass LAT_OBS into SCULIB_CALC_APPARENT and take it as an input
	argument.

	* src/surf_remip.f (SURF_REMIP): Pass LAT_OBS into
	SCULIB_CALC_APPARENT.
